Various fixes on CompareText Task, especially on correction + Code cleanup